--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    
-    "dev": "nodemon src/app.js"
-    
+    "start": "node ./src/app.js"
+
   },
   "keywords": [],
   "author": "",
